Increase minimum Java version to Java 21 - aligns with Jakarta EE 11