@@ -105,9 +105,9 @@
 
   <!-- Jakarta EE 11 platform requires Java 21+ -->
   <!-- Keep in sync with webapps/docs/tomcat-docs.xsl -->
-  <property name="compile.release" value="17"/>
-  <property name="min.java.version" value="17"/>
-  <property name="build.java.version" value="17"/>
+  <property name="compile.release" value="21"/>
+  <property name="min.java.version" value="21"/>
+  <property name="build.java.version" value="21"/>
 
   <!-- Locations to create the JAR artifacts -->
   <!-- Standard JARs -->
@@ -1969,21 +1969,13 @@
     </condition>
   </target>
 
-  <!-- Set Java 17 specific properties -->
-  <condition property="java17.nativeaccess" value="--enable-native-access=ALL-UNNAMED"><javaversion atleast="17"/></condition>
-  <property name="java17.nativeaccess" value="-Dtest.1=1"/>
-  <condition property="java17.addmodules" value="--add-modules"><javaversion exactly="17"/></condition>
-  <condition property="java17.addmodules" value="--enable-preview"><javaversion atleast="19"/></condition>
-  <property name="java17.addmodules" value="-Dtest.2=2"/>
-  <condition property="java17.incubatorforeign" value="jdk.incubator.foreign"><javaversion exactly="17"/></condition>
-  <property name="java17.incubatorforeign" value="-Dtest.3=3"/>
+  <!-- Set native specific properties -->
+  <property name="native.nativeaccess" value="--enable-native-access=ALL-UNNAMED"/>
+  <property name="native.addmodules" value="--enable-preview" />
   <condition property="runtests.librarypath" value="-Dtest.4=4">
-    <and>
-      <javaversion atleast="17"/>
-      <resourceexists>
-        <file file="${openssl-lib.jar}"/>
-      </resourceexists>
-    </and>
+    <resourceexists>
+      <file file="${openssl-lib.jar}"/>
+    </resourceexists>
   </condition>
   <property name="runtests.librarypath" value="-Djava.library.path=${test.apr.loc}"/>
   <property name="opens.javalang" value="--add-opens=java.base/java.lang=ALL-UNNAMED"/>
@@ -2022,9 +2014,8 @@
           <jvmarg value="${opens.sunrmi}"/>
           <jvmarg value="${opens.javautil}"/>
           <jvmarg value="${opens.javautilconcurrent}"/>
-          <jvmarg value="${java17.nativeaccess}"/>
-          <jvmarg value="${java17.addmodules}"/>
-          <jvmarg value="${java17.incubatorforeign}"/>
+          <jvmarg value="${native.nativeaccess}"/>
+          <jvmarg value="${native.addmodules}"/>
 
           <classpath refid="tomcat.test.classpath" />
 
